Add Marine Wx Statements

--- a/Warning_Plotter.ipynb
+++ b/Warning_Plotter.ipynb
@@ -48,7 +48,7 @@
         "id": "Tqakfay4EriZ"
       },
       "id": "Tqakfay4EriZ",
-      "execution_count": 18,
+      "execution_count": 118,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 119,
       "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
       "metadata": {
         "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
@@ -95,9 +95,9 @@
         "\n",
         "Plot Name | What's Included\n",
         "---------------- | ----------------\n",
-        "Severe and Hydro IBW Only | Severe TSTM, Tornado, Special Marine, Special Wx Statement, Flash Flood & LSRs\n",
-        "Severe and Hydro Full | Severe TSTM, Tornado, Special, Special Wx Statement, Flash Flood Warning, Areal Flood Warning/Advisory & LSRs\n",
-        "Severe Only | Severe TSTM Tornado, Special Marine Warnings, Special Wx Statement\n",
+        "Severe and Hydro IBW Only | Severe TSTM, Tornado, Special Marine, Special Wx Statement, Marine Wx Statement, Flash Flood & LSRs\n",
+        "Severe and Hydro Full | Severe TSTM, Tornado, Special, Special Wx Statement, Flash Flood Warning, Areal Flood Warning/Advisory, Marine Wx Statement, & LSRs\n",
+        "Severe Only | Severe TSTM Tornado, Special Marine Warnings, Special Wx Statement, Marine Wx Statement\n",
         "Hydro Only | Flash Flood Warning, Areal Flood Warning/Advisory & LSRs\n",
         "Non TSTM Wind | Wind Advisories, High Wind Warnings, and LSRs\n",
         "Tropical Only | Tropical Storm, Hurricane, and Extreme Wind Warnings & LSRs\n",
@@ -149,7 +149,7 @@
         "cellView": "form"
       },
       "id": "egAfE04zVatM",
-      "execution_count": 23,
+      "execution_count": 120,
       "outputs": []
     },
     {
@@ -199,6 +199,14 @@
         "    SPSFile = pd.DataFrame(data)\n",
         "else:\n",
         "  SPSFile = pd.DataFrame(data)\n",
+        "\n",
+        "if SevereAndHydroIBWOnly == True or SevereAndHydroFull == True or SevereOnly == True:\n",
+        "  try:\n",
+        "    MWSFile = geopandas.read_file('https://mesonet.agron.iastate.edu/cgi-bin/request/gis/misc.py?sts='+Begins+':00Z&ets='+Ends+':00Z')\n",
+        "  except:\n",
+        "    MWSFile = pd.DataFrame(data)\n",
+        "else:\n",
+        "  MWSFile = pd.DataFrame(data)\n",
         "\n",
         "if SevereAndHydroFull == True or HydroOnly == True:\n",
         "  try:\n",
@@ -263,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 122,
       "id": "508c7f7b",
       "metadata": {
         "id": "508c7f7b",
@@ -272,21 +280,31 @@
       "outputs": [],
       "source": [
         "# @title\n",
+        "#Storm Based Warnings\n",
         "TORWarn = Warn1.query('phenomena == \"TO\"')\n",
         "SVRWarn = Warn1.query('phenomena == \"SV\"')\n",
         "FFWWarn = Warn1.query('phenomena == \"FF\"')\n",
         "SMWWarn = Warn1.query('phenomena == \"MA\"')\n",
         "DSWWarn = Warn1.query('phenomena == \"DS\"')\n",
+        "\n",
+        "#Statements\n",
+        "MWSWarn = MWSFile.query(\"PIL.str.contains('MWS')\")\n",
         "SPSWarn = SPSFile\n",
+        "\n",
+        "#Areal FLood\n",
         "FAWWarn=floodfile.query('SIG == \"W\" & GTYPE == \"P\"')\n",
         "FAYWarn=floodfile.query('SIG == \"Y\"& GTYPE == \"P\"')\n",
+        "\n",
+        "#Tropical\n",
         "HUWarn=tropfile.query('PHENOM == \"HU\"')\n",
         "TRWarn=tropfile.query('PHENOM == \"TR\"')\n",
         "EWWarn=tropfile.query('PHENOM == \"EW\"')\n",
         "\n",
+        "#Wind\n",
         "HWWWarn=windfile.query('PHENOM == \"HW\"')\n",
         "WIYWarn=windfile.query('PHENOM == \"WI\"')\n",
         "\n",
+        "#Winter\n",
         "SQWWarn=snowsqfile\n",
         "ISWWarn=winterstormfile.query('PHENOM == \"IS\"')\n",
         "LEWWarn=winterstormfile.query('PHENOM == \"LE\"')\n",
@@ -394,6 +412,7 @@
         "    ax.add_geometries(SMWWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  'orange', edgecolor = 'black', zorder = 996, alpha = 0.7)\n",
         "    ax.add_geometries(FFWWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  'green', edgecolor = 'black', zorder = 995, alpha = 0.7)\n",
         "    ax.add_geometries(SPSWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#FFE4B5', edgecolor = 'black', zorder = 993, alpha = 0.6)\n",
+        "    ax.add_geometries(MWSWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#FFDAB9', edgecolor = 'black', zorder = 993, alpha = 0.6)\n",
         "  except:\n",
         "    pass\n",
         "  ax.add_geometries(MarZoneMap.geometry, crs = ccrs.PlateCarree(), facecolor = 'none', edgecolor = 'black',  zorder=999)\n",
@@ -423,8 +442,9 @@
         "  SVRW = mpatches.Rectangle((0, 0), 1, 0.1, linewidth=2, edgecolor='black', facecolor='yellow')\n",
         "  FFW = mpatches.Rectangle((0, 0), 1, 0.1, linewidth=2, edgecolor='black', facecolor='green')\n",
         "  SPSW = mpatches.Rectangle((0, 0), 1, 0.1, linewidth=2, edgecolor='black', facecolor='#FFE4B5')\n",
+        "  MWSW = mpatches.Rectangle((0, 0), 1, 0.1, linewidth=2, edgecolor='black', facecolor='#FFDAB9')\n",
         "\n",
-        "  axb.legend([TORW, SVRW, SMW, FFW, SPSW], ['Tornado', 'Severe T-storm', 'Special Marine', 'Flash Flood', 'Special Wx Statement'],\n",
+        "  axb.legend([TORW, SVRW, SMW, FFW, SPSW, MWSW], ['Tornado Warning', 'Severe T-storm Warning', 'Special Marine Warning', 'Flash Flood Warning', 'Special Wx Statement', 'Marine Wx Statement'],\n",
         "              loc='upper left', fontsize=10, facecolor='white', markerscale=8,\n",
         "              labelcolor='k', title='  Warning Type', title_fontsize=10,\n",
         "            bbox_to_anchor=(1.10, 0.4), fancybox=True, shadow=True,).set_zorder(10)\n",
@@ -464,6 +484,7 @@
         "    ax.add_geometries(SPSWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#FFE4B5', edgecolor = 'black', zorder = 991, alpha = 0.6)\n",
         "    ax.add_geometries(FAWWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#00FF00', edgecolor = 'black', zorder = 993, alpha = 0.6)\n",
         "    ax.add_geometries(FAYWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#00FF7F', edgecolor = 'black', zorder = 992, alpha = 0.6)\n",
+        "    ax.add_geometries(MWSWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#FFDAB9', edgecolor = 'black', zorder = 991, alpha = 0.6)\n",
         "  except:\n",
         "    pass\n",
         "  ax.add_geometries(MarZoneMap.geometry, crs = ccrs.PlateCarree(), facecolor = 'none', edgecolor = 'black',  zorder=999)\n",
@@ -494,8 +515,9 @@
         "  SPSW = mpatches.Rectangle((0, 0), 1, 0.1, linewidth=2, edgecolor='black', facecolor='#FFE4B5')\n",
         "  FAWW = mpatches.Rectangle((0, 0), 1, 0.1, linewidth=2, edgecolor='black', facecolor='#00FF00')\n",
         "  FAYW = mpatches.Rectangle((0, 0), 1, 0.1, linewidth=2, edgecolor='black', facecolor='#00FF7F')\n",
+        "  MWSW = mpatches.Rectangle((0, 0), 1, 0.1, linewidth=2, edgecolor='black', facecolor='#FFDAB9')\n",
         "\n",
-        "  axb.legend([TORW, SVRW, SMW, FFW, SPSW, FAWW, FAYW], ['Tornado', 'Severe T-storm', 'Special Marine', 'Flash Flood', 'Special Wx Statement', 'Areal Flood Warning', 'Areal Flood Advisory'],\n",
+        "  axb.legend([TORW, SVRW, SMW, FFW, FAWW, FAYW, SPSW, MWSW], ['Tornado Warning', 'Severe T-storm Warning', 'Special Marine Warning', 'Flash Flood Warning', 'Areal Flood Warning', 'Areal Flood Advisory', 'Special Wx Statement', ' Marine Wx Statement' ],\n",
         "              loc='upper left', fontsize=10, facecolor='white', markerscale=8,\n",
         "              labelcolor='k', title='  Warning Type', title_fontsize=10,\n",
         "            bbox_to_anchor=(1.10, 0.4), fancybox=True, shadow=True,).set_zorder(10)\n",
@@ -533,6 +555,7 @@
         "    ax.add_geometries(SMWWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  'orange', edgecolor = 'black', zorder = 996, alpha = 0.7)\n",
         "    ax.add_geometries(FFWWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  'green', edgecolor = 'black', zorder = 995, alpha = 0.7)\n",
         "    ax.add_geometries(SPSWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#FFE4B5', edgecolor = 'black', zorder = 993, alpha = 0.6)\n",
+        "    ax.add_geometries(MWSWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#FFDAB9', edgecolor = 'black', zorder = 993, alpha = 0.6)\n",
         "  except:\n",
         "    pass\n",
         "  ax.add_geometries(MarZoneMap.geometry, crs = ccrs.PlateCarree(), facecolor = 'none', edgecolor = 'black',  zorder=999)\n",
@@ -557,8 +580,9 @@
         "  SMW = mpatches.Rectangle((0, 0), 1, 0.1, linewidth=2, edgecolor='black', facecolor='orange')\n",
         "  SVRW = mpatches.Rectangle((0, 0), 1, 0.1, linewidth=2, edgecolor='black', facecolor='yellow')\n",
         "  SPSW = mpatches.Rectangle((0, 0), 1, 0.1, linewidth=2, edgecolor='black', facecolor='#FFE4B5')\n",
+        "  MWSW = mpatches.Rectangle((0, 0), 1, 0.1, linewidth=2, edgecolor='black', facecolor='#FFDAB9')\n",
         "\n",
-        "  axb.legend([TORW, SVRW, SMW, SPSW], ['Tornado', 'Severe T-storm', 'Special Marine', 'Special Wx Statement'],\n",
+        "  axb.legend([TORW, SVRW, SMW, SPSW, MWSW], ['Tornado Warning', 'Severe T-storm Warning', 'Special Marine Warning', 'Special Wx Statement', 'Marine Wx Statement'],\n",
         "              loc='upper left', fontsize=10, facecolor='white', markerscale=8,\n",
         "              labelcolor='k', title='  Warning Type', title_fontsize=10,\n",
         "            bbox_to_anchor=(1.10, 0.4), fancybox=True, shadow=True,).set_zorder(10)\n",
@@ -608,7 +632,7 @@
         "  FAWW = mpatches.Rectangle((0, 0), 1, 0.1, linewidth=2, edgecolor='black', facecolor='#00FF00')\n",
         "  FAYW = mpatches.Rectangle((0, 0), 1, 0.1, linewidth=2, edgecolor='black', facecolor='#00FF7F')\n",
         "\n",
-        "  axb.legend([FFW, FAWW, FAYW], ['Flash Flood','Areal Flood Warning', 'Areal Flood Advisory'],\n",
+        "  axb.legend([FFW, FAWW, FAYW], ['Flash Flood Warning',' Areal Flood Warning', 'Areal Flood Advisory'],\n",
         "              loc='upper left', fontsize=10, facecolor='white', markerscale=8,\n",
         "              labelcolor='k', title='  Warning Type', title_fontsize=10,\n",
         "            bbox_to_anchor=(1.10, 0.4), fancybox=True, shadow=True,).set_zorder(10)\n",
@@ -949,7 +973,7 @@
         "cellView": "form"
       },
       "id": "dWFSyt1poQCY",
-      "execution_count": 38,
+      "execution_count": 127,
       "outputs": []
     }
   ],
