Fix Marine Wx Statement Bug

--- a/Warning_Plotter.ipynb
+++ b/Warning_Plotter.ipynb
@@ -48,7 +48,7 @@
         "id": "Tqakfay4EriZ"
       },
       "id": "Tqakfay4EriZ",
-      "execution_count": 118,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 21,
       "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
       "metadata": {
         "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
@@ -149,7 +149,7 @@
         "cellView": "form"
       },
       "id": "egAfE04zVatM",
-      "execution_count": 120,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -173,7 +173,9 @@
         "        'PHENOM': [],\n",
         "        'SIG': [],\n",
         "        'phenomena': [],\n",
-        "        'geometry': []}\n",
+        "        'geometry': [],\n",
+        "        'PIL': [],\n",
+        "        'phenomena': []}\n",
         "\n",
         "#Pull LSRs\n",
         "try:\n",
@@ -271,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": 24,
       "id": "508c7f7b",
       "metadata": {
         "id": "508c7f7b",
@@ -288,7 +290,10 @@
         "DSWWarn = Warn1.query('phenomena == \"DS\"')\n",
         "\n",
         "#Statements\n",
-        "MWSWarn = MWSFile.query(\"PIL.str.contains('MWS')\")\n",
+        "try:\n",
+        "  MWSWarn = MWSFile.query(\"PIL.str.contains('MWS')\")\n",
+        "except:\n",
+        "  pass\n",
         "SPSWarn = SPSFile\n",
         "\n",
         "#Areal FLood\n",
@@ -973,7 +978,7 @@
         "cellView": "form"
       },
       "id": "dWFSyt1poQCY",
-      "execution_count": 127,
+      "execution_count": 7,
       "outputs": []
     }
   ],
